# flask_bash

./: .gitignore  Dockerfile  README.md  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg  up.sh
app/: app.py  logger.py  settings.py
app/api/: router.py
app/api/v1/: router.py
app/exceptions/: command_exception.py
app/middlewares/: command_ecxeption.py
app/schemas/v1/: schemas.py
app/services/: command_executor.py  command_service.py  pydantic_spec.py  shortcut.py
scripts/: dev_start.sh  test.sh
tests/: conftest.py  test_app.py
