[tool.poetry]
name = "flask-bash"
version = "0.1.0"
description = ""
authors = ["Vadim Goncharov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.1"
flask-pydantic-spec = "^0.6.0"
gunicorn = "^21.2.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
wemake-python-styleguide = "^0.18.0"
black = "^24.1.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
